--- a/Practice_1/Views/Identification/Identification.cshtml
+++ b/Practice_1/Views/Identification/Identification.cshtml
@@ -5,9 +5,9 @@
   <title>Кнопка</title>
  </head>
  <body> 
-      <p><input type="text" id="password" placeholder="Type your e-mail" name="login"></p>
-      <p><input type="password" id="password" placeholder="Type your password" name="password"></p>
-   <form style="display: inline-block;" asp-controller="MainPage" asp-action="MainPage" method="MainPage">
+   <form style=";" asp-controller="Students" asp-action="Index" method="Index">
+       <p><input type="text" id="password" placeholder="Type your e-mail" name="login"></p>
+       <p><input type="password" id="password" placeholder="Type your password" name="password"></p>
        <input type="submit" value="Enter">
    </form>
    <form style="display: inline-block;" asp-controller="Registrate" asp-action="Registrate" method="Registrate">
