--- a/Practice_1/Views/Doctors/Create.cshtml
+++ b/Practice_1/Views/Doctors/Create.cshtml
@@ -13,22 +13,22 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Surname" class="control-label"></label>
+                <label asp-for="Surname" class="control-label">Фамилия</label>
                 <input asp-for="Surname" class="form-control" />
                 <span asp-validation-for="Surname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Имя</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Middle_name" class="control-label"></label>
+                <label asp-for="Middle_name" class="control-label">Отчество</label>
                 <input asp-for="Middle_name" class="form-control" />
                 <span asp-validation-for="Middle_name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Hospital_ID" class="control-label"></label>
+                <label asp-for="Hospital_ID" class="control-label">Код больницы</label>
                 <input asp-for="Hospital_ID" class="form-control" />
                 <span asp-validation-for="Hospital_ID" class="text-danger"></span>
             </div>
