--- a/Practice_1/Views/Students/Create.cshtml
+++ b/Practice_1/Views/Students/Create.cshtml
@@ -16,11 +16,12 @@
                 <label asp-for="Surname" class="control-label"></label>
                 <input asp-for="Surname" class="form-control" />
                 <span asp-validation-for="Surname" class="text-danger"></span>
+
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <span asp-validation-for="Name" class="text-danger" ></span>
             </div>
             <div class="form-group">
                 <label asp-for="Middle_name" class="control-label"></label>
@@ -32,41 +33,35 @@
                 <input asp-for="Birth_date" class="form-control" />
                 <span asp-validation-for="Birth_date" class="text-danger"></span>
             </div>
-            <div class="form-group">
-@Html.LabelFor(model => model.Sex_ID, "Sex_ID", htmlAttributes: new { @class = "control-label col-md-2" })
-<div class="col-md-10">
-@Html.DropDownList("Sex_ID", null, htmlAttributes: new { @class = "form-control" })
-@Html.ValidationMessageFor(model => model.Sex_ID, "", new { @class = "text-danger" })
-</div>
-</div>
+
             <div class="form-group">
                 <label asp-for="Sex_ID" class="control-label"></label>
-                <input asp-for="Sex_ID" class="form-control" />
+                <select asp-for="Sex_ID" class ="form-control" asp-items="ViewBag.SexId"></select>
                 <span asp-validation-for="Sex_ID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="City_ID" class="control-label"></label>
-                <input asp-for="City_ID" class="form-control" />
+                <select asp-for="City_ID" class ="form-control" asp-items="ViewBag.City_ID"></select>
                 <span asp-validation-for="City_ID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Direction_ID" class="control-label"></label>
-                <input asp-for="Direction_ID" class="form-control" />
+                <select asp-for="Direction_ID" class="control-label" asp-items="ViewBag.Direction_ID"></select>
                 <span asp-validation-for="Direction_ID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Group_ID" class="control-label"></label>
-                <input asp-for="Group_ID" class="form-control" />
+                <select asp-for="Group_ID" class ="form-control" asp-items="ViewBag.Group_ID"></select>
                 <span asp-validation-for="Group_ID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ID_basis_study" class="control-label"></label>
-                <input asp-for="ID_basis_study" class="form-control" />
+                <select asp-for="ID_basis_study" class ="form-control" asp-items="ViewBag.ID_basis_study"></select>
                 <span asp-validation-for="ID_basis_study" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ID_form_study" class="control-label"></label>
-                <input asp-for="ID_form_study" class="form-control" />
+                <select asp-for="ID_form_study" class ="form-control" asp-items="ViewBag.ID_form_study"></select>
                 <span asp-validation-for="ID_form_study" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -81,7 +76,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Certificate_number" class="control-label"></label>
-                <input asp-for="Certificate_number" class="form-control" />
+                <select asp-for="Certificate_number" class ="form-control" asp-items="ViewBag.Certificate_number"></select>
                 <span asp-validation-for="Certificate_number" class="text-danger"></span>
             </div>
             <div class="form-group">
