--- a/Practice_1/Views/Students/Index.cshtml
+++ b/Practice_1/Views/Students/Index.cshtml
@@ -10,6 +10,22 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<body>
+    <style type="text/css">
+     TABLE {
+     width: 300px; /* Ширина таблицы */
+    border-collapse: collapse; /* Убираем двойные линии между ячейками */
+   }
+   TD, TH {
+    padding: 3px; /* Поля вокруг содержимого таблицы */
+    border: 1px solid black; /* Параметры рамки */
+   }
+   TH {
+    background: #b0e0e6; /* Цвет фона */
+   
+     }
+     </style>
+</body>
 <table class="table">
     <thead>
         <tr>
