--- a/Practice_1/Views/Certificates/Create.cshtml
+++ b/Practice_1/Views/Certificates/Create.cshtml
@@ -15,7 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Student_ID" class="control-label">Код студента</label>
-                <select asp-for="Student_ID" class ="form-control" asp-items="ViewBag.Doctor_ID"></select>
+                <select asp-for="Student_ID" class ="form-control" asp-items="ViewBag.Student_ID"></select>
                 <span asp-validation-for="Student_ID" class="text-danger"></span>
             </div>
 
