--- a/Practice_1/Views/Identification/Identification.cshtml
+++ b/Practice_1/Views/Identification/Identification.cshtml
@@ -5,7 +5,7 @@
   <title>Кнопка</title>
  </head>
  <body> 
-   <form style=";" asp-controller="Students" asp-action="Index" method="Index">
+   <form style=";" asp-controller="Identification" asp-action="Identification">
        <p><input type="text" id="password" placeholder="Type your e-mail" name="login"></p>
        <p><input type="password" id="password" placeholder="Type your password" name="password"></p>
        <input type="submit" value="Enter">
