--- a/Practice_1/Views/Certificates/Edit.cshtml
+++ b/Practice_1/Views/Certificates/Edit.cshtml
@@ -15,12 +15,12 @@
             <input type="hidden" asp-for="Certificate_number" />
             <div class="form-group">
                 <label asp-for="Student_ID" class="control-label">Код студента</label>
-                <input asp-for="Student_ID" class="form-control" />
+                <select asp-for="Student_ID" class ="form-control" asp-items="ViewBag.Student_ID"></select>
                 <span asp-validation-for="Student_ID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Doctor_ID" class="control-label">Код врача</label>
-                <input asp-for="Doctor_ID" class="form-control" />
+                <select asp-for="Doctor_ID" class ="form-control" asp-items="ViewBag.Doctor_ID"></select>
                 <span asp-validation-for="Doctor_ID" class="text-danger"></span>
             </div>
             <div class="form-group">
