--- a/Practice_1/Views/Doctors/Create.cshtml
+++ b/Practice_1/Views/Doctors/Create.cshtml
@@ -28,8 +28,8 @@
                 <span asp-validation-for="Middle_name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Hospital_ID" class="control-label">Код больницы</label>
-                <input asp-for="Hospital_ID" class="form-control" />
+                <label asp-for="Hospital_ID" class="control-label">Название больницы</label>
+               <select asp-for="Hospital_ID" class ="form-control" asp-items="ViewBag.Hospital_Name"></select>
                 <span asp-validation-for="Hospital_ID" class="text-danger"></span>
             </div>
             <div class="form-group">
