--- a/Practice_1/Views/Certificates/Edit.cshtml
+++ b/Practice_1/Views/Certificates/Edit.cshtml
@@ -34,8 +34,8 @@
                 <span asp-validation-for="End_of_action" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Type" class="control-label">Тип взаимодействия</label>
-                <input asp-for="Type" class="form-control" />
+                <label asp-for="Type" class="control-label">Тип</label>
+                <select asp-for="Type" class="form-control"><option>Вакцинация</option><option>Болезнь</option></select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
