--- a/Practice_1/Views/Doctors/Create.cshtml
+++ b/Practice_1/Views/Doctors/Create.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Hospital_ID" class="control-label">Название больницы</label>
-               <select asp-for="Hospital_ID" class ="form-control" asp-items="ViewBag.Hospital_Name"></select>
+               <select asp-for="Hospital_ID" class ="form-control" asp-items="ViewBag.Hospital_ID"></select>
                 <span asp-validation-for="Hospital_ID" class="text-danger"></span>
             </div>
             <div class="form-group">
