--- a/Practice_1/Views/Doctors/Edit.cshtml
+++ b/Practice_1/Views/Doctors/Edit.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Hospital_ID" class="control-label">Больница</label>
-                <input asp-for="Hospital_ID" class="form-control" />
+                <select asp-for="Hospital_ID" class="form-control" asp-items="ViewBag.Hospital_ID"></select>
                 <span asp-validation-for="Hospital_ID" class="text-danger"></span>
             </div>
             <div class="form-group">
