--- a/Practice_1/Views/Hospitals/Create.cshtml
+++ b/Practice_1/Views/Hospitals/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="City_code" class="control-label"></label>
-                <input asp-for="City_code" class="form-control" />
+               <select asp-for="City_code" class ="form-control" asp-items="ViewBag.City_ID"></select>
                 <span asp-validation-for="City_code" class="text-danger"></span>
             </div>
             <div class="form-group">
