--- a/Practice_1/Views/Students/Index.cshtml
+++ b/Practice_1/Views/Students/Index.cshtml
@@ -125,7 +125,7 @@
                    </tr>
                    }
         }
-        <form style="display: inline-block;" asp-controller="Students" asp-action="Index" method="Index">
+        <form style="display: inline-block;" asp-controller="Students" asp-action="Index" method="get">
            <input type="submit" value="Update">
            </form>
            <a asp-controller="Certificates" asp-action="Index" method="index">Список справок</a>
