--- a/Practice_1/Views/Students/Index.cshtml
+++ b/Practice_1/Views/Students/Index.cshtml
@@ -13,15 +13,15 @@
 <body>
     <style type="text/css">
      TABLE {
-     width: 300px; /* Ширина таблицы */
-    border-collapse: collapse; /* Убираем двойные линии между ячейками */
+     width: 300px; 
+    border-collapse: collapse;
    }
    TD, TH {
-    padding: 3px; /* Поля вокруг содержимого таблицы */
-    border: 1px solid black; /* Параметры рамки */
+    padding: 3px; 
+    border: 1px solid black;
    }
    TH {
-    background: #b0e0e6; /* Цвет фона */
+    background: #b0e0e6; 
    
      }
      </style>
